--- a/employee/src/main/resources/templates/error/404.html
+++ b/employee/src/main/resources/templates/error/404.html
@@ -186,18 +186,18 @@
 		<!-- Bootstrap core JavaScript
     ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script type="text/javascript" src="js/jquery-3.2.1.slim.min.js" ></script>
-		<script type="text/javascript" src="js/popper.min.js" ></script>
-		<script type="text/javascript" src="js/bootstrap.min.js" ></script>
+		<script type="text/javascript" src="../../static/js/jquery-3.2.1.slim.min.js" ></script>
+		<script type="text/javascript" src="../../static/js/popper.min.js" ></script>
+		<script type="text/javascript" src="../../static/js/bootstrap.min.js" ></script>
 
 		<!-- Icons -->
-		<script type="text/javascript" src="js/feather.min.js" ></script>
+		<script type="text/javascript" src="../../static/js/feather.min.js" ></script>
 		<script>
 			feather.replace()
 		</script>
 
 		<!-- Graphs -->
-		<script type="text/javascript" src="js/Chart.min.js" ></script>
+		<script type="text/javascript" src="../../static/js/Chart.min.js" ></script>
 		<script>
 			var ctx = document.getElementById("myChart");
 			var myChart = new Chart(ctx, {
