--- a/employee/src/main/resources/templates/list.html
+++ b/employee/src/main/resources/templates/list.html
@@ -50,7 +50,7 @@
 				<!--	侧边栏-->
 				<div th:insert="~{common/common.html::sidebar(active='list.html')}"></div>
 				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-					<h2>Section title</h2>
+                    <h2><a class="btn btn-sm btn-success" th:href="@{/emp}">添加员工</a></h2>
 					<div class="table-responsive">
 						<table class="table table-striped table-sm">
 							<thead>
@@ -72,8 +72,11 @@
 								<td th:text="${emp.departMent.getDepartmentName()}"></td>
 								<td th:text="${emp.getGender()==0?'女':'男'}"></td>
 								<td th:text="${emp.getBirth()}"></td>
-								<td class="btn btn-sm btn-primary">增加</td>
-								<td class="btn btn-sm btn-danger">删除</td>
+                                <td>
+                                    <a class="btn btn-sm btn-primary">修改</a>
+                                    <a class="btn btn-sm btn-danger" th:href="@{/delemp/}+${emp.getId()}">删除</a>
+                                </td>
+
 							</tr>
 							</tbody>
 						</table>
