--- a/employee/src/main/resources/templates/update.html
+++ b/employee/src/main/resources/templates/update.html
@@ -10,10 +10,10 @@
 
     <title>Dashboard Template for Bootstrap</title>
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/dashboard.css" rel="stylesheet">
+    <link th:href="@{/css/dashboard.css}" rel="stylesheet">
     <style type="text/css">
         /* Chart.js */
 
@@ -50,23 +50,24 @@
         <!--	侧边栏-->
         <div th:insert="~{common/common.html::sidebar(active='list.html')}"></div>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <form th:action="@{/emp}" method="post">
+            <form th:action="@{/updateemp}" method="post">
+                <input type="hidden" name="id" th:value="${emp.getId()}">
                 <div class="form-group">
                     <label>LastName</label>
-                    <input type="text" class="form-control" placeholder="海绵宝宝" name="name">
+                    <input th:value="${emp.getName()}" type="text" class="form-control" placeholder="海绵宝宝" name="name">
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input type="email" class="form-control" placeholder="1176244270@qq.com" name="email">
+                    <input th:value="${emp.getEmail()}" type="email" class="form-control" placeholder="1176244270@qq.com" name="email">
                 </div>
                 <div class="form-group">
                     <label>Gender</label><br>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="gender" value="1">
+                        <input th:checked="${emp.getGender()==1}" class="form-check-input" type="radio" name="gender" value="1">
                         <label class="form-check-label">男</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="gender" value="0">
+                        <input th:checked="${emp.getGender()==0}" class="form-check-input" type="radio" name="gender" value="0">
                         <label class="form-check-label">女</label>
                     </div>
                 </div>
@@ -74,14 +75,14 @@
                     <label>department</label>
                     <!--前端调用只能不能传对象-->
                     <select class="form-control" name="departMent.id">
-                        <option th:each="dep:${dept}" th:text="${dep.getDepartmentName()}"th:value="${dep.getId()}"></option>
+                        <option th:selected="${dep.getId()==emp.getDepartMent()}" th:each="dep:${dept}" th:text="${dep.getDepartmentName()}"th:value="${dep.getId()}"></option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label>Birth</label>
-                    <input type="text" class="form-control" placeholder="嘤嘤嘤" name="birth">
+                    <input th:value="${#dates.format(emp.getBirth(),'dd/MM/yyyy')}" type="text" class="form-control" placeholder="嘤嘤嘤" name="birth">
                 </div>
-                <button type="submit" class="btn btn-primary">添加</button>
+                <button type="submit" class="btn btn-primary">修改</button>
             </form>
         </main>
     </div>
@@ -90,18 +91,18 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script type="text/javascript" src="/js/jquery-3.2.1.slim.min.js"></script>
-<script type="text/javascript" src="/js/popper.min.js"></script>
-<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+<script type="text/javascript" th:src="@{/js/jquery-3.2.1.slim.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/popper.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
 
 <!-- Icons -->
-<script type="text/javascript" src="/js/feather.min.js"></script>
+<script type="text/javascript" th:src="@{/js/feather.min.js}"></script>
 <script>
     feather.replace()
 </script>
 
 <!-- Graphs -->
-<script type="text/javascript" src="asserts/js/Chart.min.js"></script>
+<script type="text/javascript" src="js/Chart.min.js"></script>
 <script>
     var ctx = document.getElementById("myChart");
     var myChart = new Chart(ctx, {
